[package]
name = "polyglot-rs"
version = "0.1.0"
authors = ["Ranadeep Biswas <ranadip.bswas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
rand = "0.7.3"
reqwest = { version = "0.10.4", features = ["blocking", "cookies", "json" ] }
serde = "1.0.105"
serde_json = "1.0.48"
